--- a/videoapp/templates/register.html
+++ b/videoapp/templates/register.html
@@ -49,7 +49,7 @@
             <button type="submit" class="btn btn-success w-100 mt-3" style="background-color: #28a745; border-color: #28a745;">Register</button>
             
             <div class="card-footer text-center mt-3">
-                <p class="mb-0" style="color: #17a2b8;">Want to login? <a href="{% url 'user-login' %}" class="text-primary">Login</a></p>
+                <p class="mb-0" style="color: #17a2b8;">Want to login? <a href="{% url 'login' %}" class="text-primary">Login</a></p>
             </div>
         </form>
     </div>
